[package]
name = "rustdll32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
windows = { version = "0.51.1", features = ["Foundation", "Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Console", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_System_Diagnostics_Debug", "Win32_UI_WindowsAndMessaging"] }
